# sncosmo

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  check-all-builtins  checkstyle  codecov.yml  machinefile  pip-requirements  pyproject.toml  setup.cfg  setup.py  tox.ini
.continuous-integration/: README.md
.continuous-integration/appveyor/: install-miniconda.ps1
.continuous-integration/travis/: setup_dependencies_common.sh  setup_environment_linux.sh  setup_environment_osx.sh
.github/workflows/: ci_tests.yml  ci_workflows.yml  pypi_deploy.yml  run_tests.yml  upload_to_pypi.yml  verify_builtins_downloads.yml
benchmarks/: bench_models.py  cubic_interpolator.py  models.py  profile_models.py
docs/: Makefile  about.rst  bandpass-list.rst  bandpasses.rst  conf.py  configuration.rst  contributing.rst  cuts.rst  development.rst  examples.rst  fitting.rst  future_development.rst  history.rst  index.rst  install.rst  introduction.rst  magsystem-list.rst  magsystems.rst  models.rst  overview.rst  photdata.rst  photometric_data.rst  plotting.rst  quickexample.rst  reference.rst  registry.rst  rtd-pip-requirements  simulation.rst  source-list.rst  spectral.rst  spectrum.rst  typing.rst  utils.rst  whatsnew.rst
docs/_examples/: README.txt  plot_custom_fitter.py  plot_custom_source.py  plot_dummy.py  plot_lc_fit.py
docs/_helpers/: bandpass_page.py  bandpass_plot.py  magsystem_page.py  photdata_aliases_table.py  source_page.py
docs/_logo/: make_logo.py
docs/_static/: sncosmo.css
docs/_templates/: globaltoc.html  layout.html
docs/_templates/autosummary/: class.rst
docs/api/: core.rst  io.rst  models.rst  utils.rst
docs/builtins/: bandpasses.rst  magsystems.rst  models.rst  sources.rst
docs/pyplots/: bandpasses.py  plotlc_example.py
docs/whatsnew/: 0.2.rst  0.3.rst  0.4.rst  0.5.rst  1.0.rst
licenses/: LICENSE.rst  SALT2MODEL_LICENSE.rst  SPHINXEXT_LICENCE.rst  notes.rst  salt2model.rst
misc/: Makefile  README.md  gen_example_data.py  gen_example_spectrum.py  gen_interp_test_data.py  subsample_hsiao_model.py  test_salt2model.cc
scripts/: generate_example_data.py  sncosmo-type
sncosmo/: .gitignore  __init__.py  _builtin.py  _deprecated.py  _registry.py  bandpasses.py  builtin.py  builtins.py  conftest.py  constants.py  core.py  dustmap.py  extinction.py  extmap.py  fitting.py  interpolation.pyx  io.py  lcio.py  magsystems.py  models.py  nest.py  photdata.py  photometric_data.py  plot.py  plotting.py  propagation_effects.py  registry.py  salt2utils.pyx  simulation.py  snanaio.py  sncosmo.cfg  snfitio.py  source_models.py  specdata.py  specmodel.py  spectral.py  spectrum.py  test_spectral.py  typing.py  utils.py
sncosmo/_builtin/: __init__.py  bandpasses.py  magsystems.py  models.py  sources.py
sncosmo/data/bandpasses/csp/: B_texas_WLcorr_atm.txt  V_LC3009_texas_WLcorr_atm.txt  V_LC3014_texas_WLcorr_atm.txt  V_LC9844_texax_WLcorr_atm.txt  g_texas_WLcorr_atm.txt  i_texas_WLcorr_atm.txt  kfilter  r_texas_WLcorr_atm.txt  u_texas_WLcorr_atm.txt
sncosmo/data/bandpasses/megacam-psf/: g0.list  g1.list  g2.list  g3.list  g4.list  g5.list  g6.list  g7.list  g8.list  g9.list  i0.list  i1.list  i2.list  i3.list  i4.list  i5.list  i6.list  i7.list  i8.list  i9.list  r0.list  r1.list  r2.list  r3.list  r4.list  r5.list  r6.list  r7.list  r8.list  r9.list  u0.list  u1.list  u2.list  u3.list  u4.list  u5.list  u6.list  u7.list  u8.list  u9.list  (+20 more)
sncosmo/data/models/: Hsiao_SED_V3_subsampled.fits  snsedextend.py
sncosmo/data/models/ccsn/: SDSS-000018.SED  SDSS-000020.SED  SDSS-002744.SED  SDSS-003818.SED  SDSS-004012.SED  SDSS-012842.SED  SDSS-013195.SED  SDSS-013376.SED  SDSS-013449.SED  SDSS-014450.SED  SDSS-014475.SED  SDSS-014492.SED  SDSS-014599.SED  SDSS-015031.SED  SDSS-015320.SED  SDSS-015475.SED  SDSS-017548.SED  SDSS-018109.SED  SDSS-018297.SED  SDSS-018408.SED  SDSS-018441.SED  SDSS-018457.SED  SDSS-018590.SED  SDSS-018596.SED  SDSS-018700.SED  SDSS-018713.SED  SDSS-018734.SED  SDSS-019323.SED
sncosmo/io/: __init__.py  asciimeta.py  core.py  salt2.py  snana.py
sncosmo/sim/: survey.py
sncosmo/tests/: __init__.py  coveragerc  test_bandpasses.py  test_builtins.py  test_csp.py  test_deprecated.py  test_download_builtins.py  test_extinction.py  test_extmap.py  test_fit_func_mutation.py  test_fitting.py  test_interpolation.py  test_io.py  test_magsystems.py  test_models.py  test_natmag.py  test_photdata.py  test_plotting.py  test_registry.py  test_salt2source.py  test_salt2utils.py  test_simulation.py  test_snanaio.py  test_source.py  test_sourcemodels.py  test_spectral.py  test_spectrum.py  test_sugarsource.py  test_utils.py
sncosmo/tests/data/: README.md  lc-03D4ag.list  snana_fits_example_head.fits  snana_fits_example_phot.fits
sncosmo/tests/data/SNLS3-04D3gx/: lightfile
sncosmo/tests/data/dust_subsection/: SFD_dust_4096_ngp.fits
sncosmo/utils/: __init__.py  extinction.py  griddata.py  io.py  mwdust.py
sncosmo/utils/tests/: test_extinction.py  test_griddata.py
snsim/: __init__.py  bandpass.py  builtin.py  core.py  io.py  models.py  spectrum.py  survey.py  utils.py
snsim/io/: __init__.py
snsim/tests/: __init__.py
