[build-system]
requires = [
    "wheel",
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "cython>=0.29.2",
    "oldest-supported-numpy",
]
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
markers = [
    "might_download: marks tests that might download a file",
]

[tool.setuptools_scm]
