[build-system]
requires = [
    "wheel",
    "setuptools",
    "cython>=0.29.2",
    "oldest-supported-numpy",
]
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
markers = [
    "might_download: marks tests that might download a file",
]
filterwarnings = [
    "error",
    "always::astropy.wcs.FITSFixedWarning",
]