[build-system]
requires = [
    "wheel",
    "setuptools",
    "cython>=0.29.2",
    "oldest-supported-numpy",
    "numpy<2; python_version<'3.9'",
    "numpy>=2; python_version>='3.9'",
]
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
markers = [
    "might_download: marks tests that might download a file",
]
filterwarnings = [
    "error",
    "always:numpy.ndarray size changed:RuntimeWarning",
    "always::astropy.wcs.FITSFixedWarning",
]
