[metadata]
name = sncosmo
author = The SNCosmo Developers
author_email = kylebarbary@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://sncosmo.readthedocs.org
description = Package for supernova cosmology based on astropy
long_description = file: README.md
keywords = supernova, cosmology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages =
    sncosmo
    sncosmo.tests
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    astropy>=1.0.0
    extinction>=0.2.2
    numpy>=1.18
    scipy>=0.9.0
python_requires = >=3.5

[options.extras_require]
test = # Required to run the test suite.
    pytest
    pytest-astropy
    cython
test_coverage = # Required for coverage tests.
    coveralls
    coverage
    pytest-cov
all =
    iminuit
    matplotlib
    emcee
    nestle
docs =
    cython
    numpy
    matplotlib
    scipy
    extinction
    astropy
    sphinx
    sphinx_gallery
    sphinx_rtd_theme
    pillow
    iminuit
    emcee
    numpydoc

[options.package_data]
* = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*
tests = coveragerc
sncosmo = sncosmo.cfg
