[metadata]
name = sncosmo
author = The SNCosmo Developers
author_email = kylebarbary@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://sncosmo.readthedocs.org
description = Package for supernova cosmology based on astropy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = supernova, cosmology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# We set packages to find: to automatically find all sub-packages
packages =
    sncosmo
    sncosmo.tests
zip_safe = False
install_requires =
    astropy>=3.1
    extinction>=0.4.4
    h5py>=3.12
    numpy>=1.14.5   # 1.14.6 seems to work but not with oldest-supported-numpy
    pyyaml>=3.13
    scipy>=1.3.0
python_requires = >=3.7

[options.extras_require]
oldestdeps = # Oldest versions supported, used for tests.
    astropy==3.1
    extinction==0.4.4
    h5py==3.12
    numpy==1.14.5
    pyyaml==3.13
    scipy==1.3.0
test = # Required to run the test suite.
    pytest
    pytest-astropy
    cython
test_coverage = # Required for coverage tests.
    coveralls
    coverage
    pytest-cov
all = # Used by some parts of sncosmo, but not required.
    iminuit
    matplotlib
    emcee>=3
    nestle
docs = # Required to build the docs.
    cython
    numpy
    matplotlib
    scipy
    extinction
    astropy
    sphinx
    sphinx_gallery
    sphinx_rtd_theme
    pillow
    iminuit
    emcee>=3
    numpydoc
    pyyaml

[options.package_data]
* = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*
sncosmo = sncosmo.cfg

[coverage:run]
source = sncosmo
omit =
   sncosmo/tests/*
   sncosmo/conftest.py
   sncosmo/__init__.py
   sncosmo/version.py
   sncosmo/cython_version.py
   sncosmo/_deprecated.py

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
